src/parse/tibasic-parser.ts
import * as types from '../common/types'
import * as util from './pegutil'

// Generated by peggy v. 2.0.1 (ts-pegjs plugin v. 2.1.0 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
  source: string;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, SyntaxError.prototype);
    } else {
      (this as any).__proto__ = SyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }

  format(sources: { source: string; text: string }[]): string {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ':' + s.line + ':' + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd('', s.line.toString().length, ' ');
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str += '\n --> ' + loc + '\n' + filler + ' |\n' + s.line + ' | ' + line + '\n' + filler + ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: {[id: string]: any} = { Start: peg$parseStart };
  let peg$startRuleFunction: () => any = peg$parseStart;

  const peg$c0 = peg$anyExpectation();
  const peg$c1 = /^[A-Z]/;
  const peg$c2 = peg$classExpectation([["A", "Z"]], false, false);
  const peg$c3 = /^[A-Z0-9]/;
  const peg$c4 = peg$classExpectation([["A", "Z"], ["0", "9"]], false, false);
  const peg$c5 = /^[0-9]/;
  const peg$c6 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c7 = function(): any { return true };
  const peg$c8 = ")";
  const peg$c9 = peg$literalExpectation(")", false);
  const peg$c10 = function(): any { return text(); };
  const peg$c11 = "&theta";
  const peg$c12 = peg$literalExpectation("&theta", false);
  const peg$c13 = function(): any { return 'THETA' };
  const peg$c14 = "Str";
  const peg$c15 = peg$literalExpectation("Str", false);
  const peg$c16 = "&L";
  const peg$c17 = peg$literalExpectation("&L", false);
  const peg$c18 = /^[1-6]/;
  const peg$c19 = peg$classExpectation([["1", "6"]], false, false);
  const peg$c20 = function(number: any): any { return types.ListVariablePrefix + number; };
  const peg$c21 = "&list";
  const peg$c22 = peg$literalExpectation("&list", false);
  const peg$c23 = function(prefix: any): any { return types.ListVariablePrefix + text().substring(prefix.length); };
  const peg$c24 = function(name: any): any { 
      const x: types.NumericVariable = { type: types.VARIABLE, name2: name } 
      return x
    };
  const peg$c25 = function(name: any): any { return { type: types.STRINGVARIABLE, name } };
  const peg$c26 = function(name: any): any { return { type: types.LISTVARIABLE, name, custom: false } };
  const peg$c27 = function(name: any): any { return { type: types.LISTVARIABLE, name, custom: true } };
  const peg$c28 = "(";
  const peg$c29 = peg$literalExpectation("(", false);
  const peg$c30 = function(list: any, index: any): any { return { type: types.LISTINDEX, list, index } };
  const peg$c31 = /^[+\-]/;
  const peg$c32 = peg$classExpectation(["+", "-"], false, false);
  const peg$c33 = "&E";
  const peg$c34 = peg$literalExpectation("&E", false);
  const peg$c35 = ".";
  const peg$c36 = peg$literalExpectation(".", false);
  const peg$c37 = function(integer: any, fraction: any, exponent: any): any { 
      return { type: types.NUMBER, integer, fraction, exponent }
    };
  const peg$c38 = function(fraction: any, exponent: any): any { 
      return { type: types.NUMBER, fraction, exponent }
    };
  const peg$c39 = function(integer: any, exponent: any): any { 
      return { type: types.NUMBER, integer, exponent }
    };
  const peg$c40 = /^[^"]/;
  const peg$c41 = peg$classExpectation(["\""], true, false);
  const peg$c42 = "\"";
  const peg$c43 = peg$literalExpectation("\"", false);
  const peg$c44 = function(chars: any): any { return { type: types.STRING, chars } };
  const peg$c45 = "Ans";
  const peg$c46 = peg$literalExpectation("Ans", false);
  const peg$c47 = function(): any { return { type: types.ANS } };
  const peg$c48 = "getKey";
  const peg$c49 = peg$literalExpectation("getKey", false);
  const peg$c50 = function(): any { return { type: types.GetKey } };
  const peg$c51 = "{";
  const peg$c52 = peg$literalExpectation("{", false);
  const peg$c53 = "}";
  const peg$c54 = peg$literalExpectation("}", false);
  const peg$c55 = function(head: any, tail: any): any { return util.buildList(head, tail); };
  const peg$c56 = "&-";
  const peg$c57 = peg$literalExpectation("&-", false);
  const peg$c58 = function(operator: any, argument: any): any { return { type: types.UNARY, operator, argument } };
  const peg$c59 = function(head: any, tail: any, end: any): any { return util.buildImplicitBinaryExpression(head, tail, end); };
  const peg$c60 = "*";
  const peg$c61 = peg$literalExpectation("*", false);
  const peg$c62 = "/";
  const peg$c63 = peg$literalExpectation("/", false);
  const peg$c64 = function(head: any, tail: any): any { return util.buildBinaryExpression(head, tail); };
  const peg$c65 = "+";
  const peg$c66 = peg$literalExpectation("+", false);
  const peg$c67 = "-";
  const peg$c68 = peg$literalExpectation("-", false);
  const peg$c69 = "=";
  const peg$c70 = peg$literalExpectation("=", false);
  const peg$c71 = "!=";
  const peg$c72 = peg$literalExpectation("!=", false);
  const peg$c73 = ">=";
  const peg$c74 = peg$literalExpectation(">=", false);
  const peg$c75 = ">";
  const peg$c76 = peg$literalExpectation(">", false);
  const peg$c77 = "<=";
  const peg$c78 = peg$literalExpectation("<=", false);
  const peg$c79 = "<";
  const peg$c80 = peg$literalExpectation("<", false);
  const peg$c81 = " and ";
  const peg$c82 = peg$literalExpectation(" and ", false);
  const peg$c83 = " or ";
  const peg$c84 = peg$literalExpectation(" or ", false);
  const peg$c85 = " xor ";
  const peg$c86 = peg$literalExpectation(" xor ", false);
  const peg$c87 = ",";
  const peg$c88 = peg$literalExpectation(",", false);
  const peg$c89 = function(): any { return { type: types.EmptyStatement } };
  const peg$c90 = function(value: any): any { return { type: types.ValueStatement, value }};
  const peg$c91 = "->";
  const peg$c92 = peg$literalExpectation("->", false);
  const peg$c93 = function(value: any, assignable: any): any { return { type: types.AssignmentStatement, value, assignable }};
  const peg$c94 = "If ";
  const peg$c95 = peg$literalExpectation("If ", false);
  const peg$c96 = function(value: any, extra: any): any { return { type: types.IfStatement, value, extra }};
  const peg$c97 = "Then";
  const peg$c98 = peg$literalExpectation("Then", false);
  const peg$c99 = function(extra: any): any { return { type: types.ThenStatement, extra }};
  const peg$c100 = "Else";
  const peg$c101 = peg$literalExpectation("Else", false);
  const peg$c102 = function(extra: any): any { return { type: types.ElseStatement, extra }};
  const peg$c103 = "For(";
  const peg$c104 = peg$literalExpectation("For(", false);
  const peg$c105 = function(variable: any, start: any, end: any, step: any, args: any, extra: any): any { return { type: types.ForLoop, variable, start, end, step, args, extra }};
  const peg$c106 = "While ";
  const peg$c107 = peg$literalExpectation("While ", false);
  const peg$c108 = function(value: any, extra: any): any { return { type: types.WhileLoop, value, extra }};
  const peg$c109 = "Repeat ";
  const peg$c110 = peg$literalExpectation("Repeat ", false);
  const peg$c111 = function(value: any, extra: any): any { return { type: types.RepeatLoop, value, extra }};
  const peg$c112 = "End";
  const peg$c113 = peg$literalExpectation("End", false);
  const peg$c114 = function(extra: any): any { return { type: types.EndStatement, extra }};
  const peg$c115 = "Pause";
  const peg$c116 = peg$literalExpectation("Pause", false);
  const peg$c117 = function(): any { return { type: types.PauseStatement }};
  const peg$c118 = "Lbl ";
  const peg$c119 = peg$literalExpectation("Lbl ", false);
  const peg$c120 = function(location: any): any { return { type: types.LabelStatement, location }};
  const peg$c121 = "Goto ";
  const peg$c122 = peg$literalExpectation("Goto ", false);
  const peg$c123 = function(location: any): any { return { type: types.GotoStatement, location }};
  const peg$c124 = "IS>(";
  const peg$c125 = peg$literalExpectation("IS>(", false);
  const peg$c126 = function(variable: any, end: any): any { return { type: types.IncrementSkip, variable, end }};
  const peg$c127 = "DS<(";
  const peg$c128 = peg$literalExpectation("DS<(", false);
  const peg$c129 = function(variable: any, end: any): any { return { type: types.DecrementSkip, variable, end }};
  const peg$c130 = "Menu(";
  const peg$c131 = peg$literalExpectation("Menu(", false);
  const peg$c132 = function(title: any, options: any): any { return util.buildMenuStatement(title, options); };
  const peg$c133 = "prgm";
  const peg$c134 = peg$literalExpectation("prgm", false);
  const peg$c135 = function(name: any): any { return { type: types.ProgramStatement, name }};
  const peg$c136 = "Return";
  const peg$c137 = peg$literalExpectation("Return", false);
  const peg$c138 = function(): any { return { type: types.ReturnStatement }};
  const peg$c139 = "Stop";
  const peg$c140 = peg$literalExpectation("Stop", false);
  const peg$c141 = function(): any { return { type: types.StopStatement }};
  const peg$c142 = "DelVar ";
  const peg$c143 = peg$literalExpectation("DelVar ", false);
  const peg$c144 = function(variable: any): any { return { type: types.DelVarStatement, variable }};
  const peg$c145 = "GraphStyle(";
  const peg$c146 = peg$literalExpectation("GraphStyle(", false);
  const peg$c147 = function(equation: any, style: any): any { return { type: types.GraphStyleStatement, equation, style }};
  const peg$c148 = "OpenLib(";
  const peg$c149 = peg$literalExpectation("OpenLib(", false);
  const peg$c150 = function(name: any): any { return { type: types.OpenLibStatement, name }};
  const peg$c151 = "ExecLib(";
  const peg$c152 = peg$literalExpectation("ExecLib(", false);
  const peg$c153 = function(name: any): any { return { type: types.ExecLibStatement, name }};
  const peg$c154 = "Input ";
  const peg$c155 = peg$literalExpectation("Input ", false);
  const peg$c156 = function(text: any, variable: any): any { return { type: types.Input, text, variable } };
  const peg$c157 = "Prompt ";
  const peg$c158 = peg$literalExpectation("Prompt ", false);
  const peg$c159 = function(variable: any): any { return { type: types.Prompt, variable } };
  const peg$c160 = "Disp ";
  const peg$c161 = peg$literalExpectation("Disp ", false);
  const peg$c162 = function(value: any): any { return { type: types.Display, value } };
  const peg$c163 = "DispGraph";
  const peg$c164 = peg$literalExpectation("DispGraph", false);
  const peg$c165 = function(): any { return { type: types.DispGraph } };
  const peg$c166 = "DispTable";
  const peg$c167 = peg$literalExpectation("DispTable", false);
  const peg$c168 = function(): any { return { type: types.DispTable } };
  const peg$c169 = "Output(";
  const peg$c170 = peg$literalExpectation("Output(", false);
  const peg$c171 = function(row: any, column: any, value: any): any { return { type: types.Output, row, column, value } };
  const peg$c172 = "ClrHome";
  const peg$c173 = peg$literalExpectation("ClrHome", false);
  const peg$c174 = function(): any { return { type: types.ClrHome } };
  const peg$c175 = "ClrTable";
  const peg$c176 = peg$literalExpectation("ClrTable", false);
  const peg$c177 = function(): any { return { type: types.ClrTable } };
  const peg$c178 = "GetCalc(";
  const peg$c179 = peg$literalExpectation("GetCalc(", false);
  const peg$c180 = function(variable: any, portflag: any): any { return { type: types.GetCalc, variable, portflag } };
  const peg$c181 = "Get(";
  const peg$c182 = peg$literalExpectation("Get(", false);
  const peg$c183 = function(variable: any): any { return { type: types.Get, variable } };
  const peg$c184 = "Send(";
  const peg$c185 = peg$literalExpectation("Send(", false);
  const peg$c186 = function(variable: any): any { return { type: types.Send, variable } };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseStart(): any {
    let s0;

    s0 = peg$parseStatement();

    return s0;
  }

  function peg$parseSourceCharacter(): any {
    let s0;

    if (input.length > peg$currPos) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseAlpha(): any {
    let s0;

    if (peg$c1.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseAlphaNum(): any {
    let s0;

    if (peg$c3.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseDigit(): any {
    let s0;

    if (peg$c5.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }

    return s0;
  }

  function peg$parseExtraCharacters(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSourceCharacter();
    if (s2 as any !== peg$FAILED) {
      while (s2 as any !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseSourceCharacter();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseOptionalEndParen(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 41) {
      s0 = peg$c8;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s0 as any === peg$FAILED) {
      s0 = null;
    }

    return s0;
  }

  function peg$parseLocation(): any {
    let s0, s1, s2;
